Updated page html descriptions

--- a/public/index.html
+++ b/public/index.html
@@ -27,15 +27,15 @@
     <title>123Swap</title>
     <meta
       name="description"
-      content="Flip 123bonus, collect 123stake and stake them with 123Swap, the best decentralized exchange on Binance Smart Chain."
+      content="123swap finance - swap, earn, invest, bridge crypto & NFT in multiple blockchains."
     />
     <meta name="theme-color" content="#000000" />
     <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no" />
     <meta name="twitter:image" content="https://farm.123swap.finance/hero.png" />
-    <meta name="twitter:description" content="Farm the native coin of 123Swap with 123Swap FLP Token" />
+    <meta name="twitter:description" content="All in one leading DEFI cross-chain protocol" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="🥞 123Swap - A next evolution DeFi exchange on Binance Smart Chan (BSC)" />
+    <meta name="twitter:title" content="123swap finance - swap, earn, invest, bridge crypto & NFT in multiple blockchains." />
   </head>
   <body>
     <!-- GTAG (noscript) -->
